<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/getStatistics"
        android:text="@string/getStatistics"
        android:onClick="click"
        android:gravity="center_vertical|left"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/controlCpuMaxFrequency"
        android:text="@string/controlCpuMaxFrequency"
        android:onClick="click"
        android:gravity="center_vertical|left"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/getAllCpuFrequencies"
        android:text="@string/getAllCpuFrequencies"
        android:onClick="click"
        android:gravity="center_vertical|left"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/getPriority"
        android:text="@string/getPriority"
        android:onClick="click"
        android:gravity="center_vertical|left"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/resetPriority"
        android:text="@string/resetPriority"
        android:onClick="click"
        android:gravity="center_vertical|left"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/addRateLimitRule"
        android:text="@string/addRateLimitRule"
        android:onClick="click"
        android:gravity="center_vertical|left"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/delRateLimitRule"
        android:text="@string/delRateLimitRule"
        android:onClick="click"
        android:gravity="center_vertical|left"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
